<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.JustJava.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapWords"
        android:hint="@string/input_hint"/>

    <TextView
        android:id="@+id/ToppingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"
        android:layout_marginLeft="16dp"
        android:textAllCaps="true"/>

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/whipped_cream"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/chocolate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

       <Button
        android:id="@+id/decrement"
        android:layout_height="48dp"
        android:layout_width="48dp"
        android:text="-"
        android:onClick="decrement"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/increment"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:text="+"
            android:onClick="increment"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="#000000"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:layout_marginLeft="16dp"/>

</LinearLayout>